umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@gaussview_badmeth.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
molecule:
  success: false
  error:
    error_type: InvalidCountsLine
    message: "Invalid counts line at line 3, col 38"
molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 5, col 20"
extended_molecule:
  success: false
  error:
    error_type: InvalidCountsLine
    message: "Invalid counts line at line 3, col 38"
extended_molecule_lenient:
  success: false
  error:
    error_type: InvalidAtomLine
    message: "Invalid atom line at line 5, col 20"
