umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@hmdb_HMDB0039343 (1,3,4,5-Tetra-O-galloylquinic acid).mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  summary:
    sum_formula: C35O22
    atom_count: 57
    bond_count: 61
    property_count: 0
molecule_lenient:
  success: true
  summary:
    sum_formula: C35O22
    atom_count: 57
    bond_count: 61
    property_count: 0
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C35O22
    atom_count: 57
    bond_count: 61
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C35O22
    atom_count: 57
    bond_count: 61
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
